charts/traefik/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: traefik

spec:
  ports:
    - port: 8080
      targetPort: traefik
      name: traefik
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: traefik

spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - targetPort: web
      port: 80
      name: web
    - targetPort: websecure
      port: 443
      name: websecure
  selector:
    app: traefik
