charts/traefik/03-ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.herd-1.herdwick.oatmealstuffing.com`) && PathPrefix(`/dashboard`)
    kind: Rule
    priority: 10
    services:
    - name: traefik-dashboard-service
      port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-secure
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.herd-1.herdwick.oatmealstuffing.com`) && PathPrefix(`/dashboard`)
    kind: Rule
    priority: 10
    services:
    - name: traefik-dashboard-service
      port: 8080
  tls:
    certResolver: default
